# dllinject

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  lib.c  makelib.bat
src/: injector.cpp  injector.h  main.cpp  pe_parser.cpp  pe_parser.h
